--- a/templates/index.html
+++ b/templates/index.html
@@ -103,18 +103,21 @@
                             data-clause-id="overlap_{{ loop.index }}"
                             data-clause-type="overlap"
                             data-choice="agree"
-                            data-clause-text="{{ item['sentence_1'] }} {{ item['sentence_2'] }}">Agree</button>
+                            data-sentence-1="{{ item['sentence_1'] }}"
+                            data-sentence-2="{{ item['sentence_2'] }}">Agree</button>
                     <button class="btn btn-danger btn-sm me-1 response-button"
                             data-clause-id="overlap_{{ loop.index }}"
                             data-clause-text="{{ item['sentence_1'] }} {{ item['sentence_2'] }}"
                             data-clause-type="overlap"
                             data-choice="disagree"
-                            data-clause-text="{{ item['sentence_1'] }} {{ item['sentence_2'] }}">Disagree</button>
+                            data-sentence-1="{{ item['sentence_1'] }}"
+                            data-sentence-2="{{ item['sentence_2'] }}">Disagree</button>                            
                     <button class="btn btn-secondary btn-sm response-button"
                             data-clause-id="overlap_{{ loop.index }}"
                             data-clause-type="overlap"
                             data-choice="neutral"
-                            data-clause-text="{{ item['sentence_1'] }} {{ item['sentence_2'] }}">Neutral</button>
+                            data-sentence-1="{{ item['sentence_1'] }}"
+                            data-sentence-2="{{ item['sentence_2'] }}">Neutral</button>                            
                   </div>
                 </div>
               </div>
@@ -157,17 +160,20 @@
                             data-clause-id="conflict_{{ loop.index }}" 
                             data-clause-type="conflict" 
                             data-choice="agree"
-                            data-clause-text="{{ item['sentence_1'] }} {{ item['sentence_2'] }}">Agree</button>
+                            data-sentence-1="{{ item['sentence_1'] }}"
+                            data-sentence-2="{{ item['sentence_2'] }}">Agree</button>
                     <button class="btn btn-danger btn-sm me-1 response-button" 
                             data-clause-id="conflict_{{ loop.index }}" 
                             data-clause-type="conflict" 
                             data-choice="disagree"
-                            data-clause-text="{{ item['sentence_1'] }} {{ item['sentence_2'] }}">Disagree</button>
+                            data-sentence-1="{{ item['sentence_1'] }}"
+                            data-sentence-2="{{ item['sentence_2'] }}">Disagree</button>
                     <button class="btn btn-secondary btn-sm response-button" 
                             data-clause-id="conflict_{{ loop.index }}" 
                             data-clause-type="conflict" 
                             data-choice="neutral"
-                            data-clause-text="{{ item['sentence_1'] }} {{ item['sentence_2'] }}">Neutral</button>
+                            data-sentence-1="{{ item['sentence_1'] }}"
+                            data-sentence-2="{{ item['sentence_2'] }}">Neutral</button>
                   </div>
                 </div>
               </div>
@@ -209,17 +215,20 @@
                             data-clause-id="unique1_{{ loop.index }}" 
                             data-clause-type="unique1" 
                             data-choice="agree"
-                            data-clause-text="{{ item['sentence_1'] }} {{ item['sentence_2'] }}">Agree</button>
+                            data-sentence-1="{{ item['sentence_1'] }}"
+                            data-sentence-2="{{ item['sentence_2'] }}">Agree</button>
                     <button class="btn btn-danger btn-sm me-1 response-button" 
                             data-clause-id="unique1_{{ loop.index }}" 
                             data-clause-type="unique1" 
                             data-choice="disagree"
-                            data-clause-text="{{ item['sentence_1'] }} {{ item['sentence_2'] }}">Disagree</button>
+                            data-sentence-1="{{ item['sentence_1'] }}"
+                            data-sentence-2="{{ item['sentence_2'] }}">Disagree</button>
                     <button class="btn btn-secondary btn-sm response-button" 
                             data-clause-id="unique1_{{ loop.index }}" 
                             data-clause-type="unique1" 
                             data-choice="neutral"
-                            data-clause-text="{{ item['sentence_1'] }} {{ item['sentence_2'] }}">Neutral</button>
+                            data-sentence-1="{{ item['sentence_1'] }}"
+                            data-sentence-2="{{ item['sentence_2'] }}">Neutral</button>                            
                   </div>
                 </div>
               </div>
@@ -261,17 +270,20 @@
                             data-clause-id="unique2_{{ loop.index }}" 
                             data-clause-type="unique2" 
                             data-choice="agree"
-                            data-clause-text="{{ item['sentence_1'] }} {{ item['sentence_2'] }}">Agree</button>
+                            data-sentence-1="{{ item['sentence_1'] }}"
+                            data-sentence-2="{{ item['sentence_2'] }}">Agree</button>                            
                     <button class="btn btn-danger btn-sm me-1 response-button" 
                             data-clause-id="unique2_{{ loop.index }}" 
                             data-clause-type="unique2" 
                             data-choice="disagree"
-                            data-clause-text="{{ item['sentence_1'] }} {{ item['sentence_2'] }}">Disagree</button>
+                            data-sentence-1="{{ item['sentence_1'] }}"
+                            data-sentence-2="{{ item['sentence_2'] }}">Disagree</button>
                     <button class="btn btn-secondary btn-sm response-button" 
                             data-clause-id="unique2_{{ loop.index }}" 
                             data-clause-type="unique2" 
                             data-choice="neutral"
-                            data-clause-text="{{ item['sentence_1'] }} {{ item['sentence_2'] }}">Neutral</button>
+                            data-sentence-1="{{ item['sentence_1'] }}"
+                            data-sentence-2="{{ item['sentence_2'] }}">Neutral</button>
                   </div>
                 </div>
               </div>
